# wap

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json  package.json
backend/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
backend/.cargo/: config.toml
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
backend/migrations/: 20250330_00_create_tables.sql
backend/sql/: select-user.sql
backend/src/: config.rs  lib.rs  main.rs  model.rs  response.rs  structs.rs  tests.rs
backend/src/authjwt/: handlers_auth.rs  mod.rs
backend/src/routes/: mod.rs
backend/src/routes/auth/: handlers.rs  middleware.rs  middlewares.rs  mod.rs  models.rs  service.rs  services.rs  utils.rs
backend/src/routes/location/: handlers.rs
backend/src/routes/natural_phenomenon_location/: domains.rs  handlers.rs  mod.rs  model.rs  models.rs  routers.rs  service.rs  services.rs
backend/src/routes/natural_phenomenon_locations/: handlers.rs  models.rs  services.rs
backend/src/routes/settings/: handlers.rs  mod.rs  models.rs  routers.rs  services.rs
backend/src/routes/uploads/: handlers.rs  mod.rs  models.rs  services.rs
backend/src/routes/weather_location/: domains.rs  handlers.rs  mod.rs  models.rs  services.rs
backend/src/routes/weather_locations/: handlers.rs  mod.rs  models.rs  services.rs
backend/src/services/: weather.rs
backend/src/shared/: models.rs
frontend/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/AddButton/: AddButton.tsx  ModalWindow.module.scss
frontend/src/components/AuthDialog/: AuthDialog.tsx
frontend/src/components/Button/: Button.module.scss  Button.tsx
frontend/src/components/DeleteButton/: DeleteButton.tsx
frontend/src/components/DeleteModal/: DeleteModal.tsx
frontend/src/components/EditButton/: EditButton.tsx
frontend/src/components/LocationCard/: LocationCard.module.scss  LocationCard.tsx
frontend/src/components/Map/: Map.tsx
frontend/src/components/ModalWindow/: Modal.tsx  ModalWindow.module.scss
frontend/src/components/Page/: Page.tsx
frontend/src/components/Searchbar/: Searchbar.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  form.tsx  label.tsx  select.tsx  sheet.tsx  sidebar.tsx  toast.tsx
frontend/src/environment/: environment.ts
frontend/src/features/AuthDialog/: AuthDialog.tsx  (+1 more)
frontend/src/lib/: api.ts  favorites.ts  logger.ts  store.ts  utils.ts
frontend/src/util/: isAuthorized.ts  utils.ts
nginx/conf.d/: default.conf
nginx/html/maintenance/: maintenance.html
nginx/snippets/: maintenance-page.conf
(+58 files in other folders)
