[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5.3"
axum-extra = "0.10.1"
rand_core = "0.9.3"

# OpenAPI
axum = { version = "0.8", features = ["tokio", "json"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa-axum = "0.2.0"
utoipa = "5"
uuid = { version = "1.16.0", features = ["v4"] }




