[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "time", "uuid", "macros"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5.3"
axum-extra = { version = "0.10.1", features = ["cookie"] }
rand_core = { version = "0.6.4", features = ["std"] }

# OpenAPI
axum = { version = "0.8", features = ["tokio", "json"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa-axum = "0.2.0"
utoipa = { version = "5", features = ["chrono"] }
uuid = { version = "1.16.0", features = ["v4"] }

